--- a/example.env
+++ b/example.env
@@ -1,2 +1,2 @@
-OPENAI_API_KEY=sk-EYYOYsIn8XFAVBhySUzk6y_EBqpIV9oG-6tiS7AhJKT3BlbkFJFwpFTdfwWPk43PukZ20zOw1VDWcOUDxSVcO6UY-PAA
-HUGGINGFACEHUB_API_TOKEN=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
+OPENAI_API_KEY=
+HUGGINGFACEHUB_API_TOKEN=
